--- a/css/global.css
+++ b/css/global.css
@@ -4,20 +4,26 @@ Dark blue: rgb(15,58,102);
 Navbar: light blue - #b3dbf4;
 */
 
-/*GRID INFO, BODY STYLING, CONTENT BOX*/
+/*LINK FOR ICONS:
+<script src="https://kit.fontawesome.com/b6b0e117a3.js" crossorigin="anonymous"></script>
+*/
 
-/*GRID INFO, BODY STYLING, CONTENT BOX*/
+/* sarah: added */
+* {
+    margin: 0;
+    padding: 0;
+}
 
 header * {
     box-sizing: border-box;
 }
+
 .grid-container
 {
     display: grid;
-    width:100vw;
-    grid-template-columns:auto 1fr;
+    width:100%;
+    grid-template-columns:1fr;
     gap: 0;
-    flex-wrap: wrap;
 }
 
 .footer
@@ -27,79 +33,80 @@ header * {
     grid-template-columns:1fr 1fr 1fr 1fr 1fr;
     flex-wrap: wrap;
     background-color:#e2eef7; 
-    justify-content:center;
-    width:100vw;
+    justify-content:space-between;
+    width: 100%;
     margin-top: 50px;
     height: auto;
 }
     .footer-items
     {
-        padding-left: 80px;
-        padding-right: 80px;
+        padding-inline-start: 80px;
+        padding-inline-end: 80px;
         text-align: center;
     }
 
 body
     {
+        position: static;
         background-color:#f5f5f5;
-        width: 100vw;
-        right: 0;
-        left:0;
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        margin: 0;
     }
 
 
  .textImg
     {
     justify-content: flex-end;
-    width:50vw;
     padding-inline: 80px;
+    display: grid;
+    margin: auto;
     }
 
 
 /*CSS FOR NAVBAR*/    
 /*Section*/
 section {
-    /*
-    This is something more so to add to individual css style sheets, however if you guys mess with the margins it has a nice affect
-    */
-    margin-top: 3%;
+    
+    margin-top: 1%;
     margin-left: 3%;
     margin-right: 3%;
     min-height: 50vh;
     
-    padding-top: 80px;
+    padding-top: 40px;
     padding-right: 9%;
     padding-bottom: 80px;
     padding-left: 9%;
 
-    /* Shadow property if you want it*/
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); 
 }
+
 
 #white {
-    background: white;
+    background: none;
 }
 
-#section_in_a_section {
-    background: #f5f5f5;
-}
+
+
 
 /*HEADER AND NAVBAR*/
-
 header
     {
     background-image: url(../images/FSF-lightGrain.png); /* Set your image URL here */
     background-size: cover; /* Ensure the image covers the entire element */
     background-repeat: no-repeat; /* Prevent the image from repeating */
     background-position: center;
+    
     /* Set the height and add padding to prevent cropping */
     min-height: 22vw; 
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
+    position:static;
     }
 
 
 .menu_bar {
+    position: fixed; /*This makes the navbar stuck to the top*/
     top: 0;
     background-color: rgb(15,58,102);
     height: 60px;
@@ -195,15 +202,16 @@ header
 
 
 /*GLOBAL FORMATTING FOR TEXT, HEADERS, AND LINKS*/
+
 h1
     {
-        font-family:Georgia, 'Times New Roman', Times, serif;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         color: #021a48;
     }
 
 h2  
     {
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         color:rgb(15,58,102);
         font-size: xx-large;
         text-align: center;
@@ -229,16 +237,21 @@ a
         color:inherit; 
     }
     
-    a:hover
-    {
+a:hover
+{
         text-decoration: underline;
-    }
+    
 
+}
 
+a.link_decoration {
+    color: rgb(15,58,102);
+}
 
 /*CAROUSEL IMAGES*/
 .carousel 
 {
+    margin-top: 50px;
     padding-top: 50px;
     padding-right: 100px;
     position: relative;
@@ -270,18 +283,6 @@ a
     display: block; 
 }
 
-button {
-        position:absolute;
-        top: 50%; /* Keep the buttons centered vertically */
-        transform: translateY(-50%); /* Adjust for button height */
-        background-color: rgba(255, 255, 255, 0.8);
-        border: none;
-        cursor: pointer;
-        font-size: 18px;
-        padding: 5px;
-        z-index: 100; 
-}
-
 .prev {
     left: 0px;
 }
@@ -290,33 +291,81 @@ button {
     right: 100px; 
 }
 
-
-
 /*SMALL SCREEN */
 @media (max-width: 480px) {
     .grid-container {
-        grid-template-columns: 1fr; /* 1 column */
+        grid-template-columns: 1fr;
+        justify-items: center;
     }
+    .footer {
+        grid-template-columns: 1fr; 
+        justify-items: center;
+    }
+    .footer-items
+    {
+        padding-top: 10px;
+        padding-bottom: 15px;
+        }
+    .textImg
+        {
+            grid-template-columns: 1fr;
+            padding-bottom: 50px; 
+        }
+    .carousel-images img {
+            width: 400px;
+            height: auto;
+            object-fit:cover;
+            display: none; 
+          }
+          .next {
+            right: 0px; 
+        }
 }
 
 /*MED SCREEN */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 1000px) {
     .grid-container {
-        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        grid-template-columns: 1fr;
+        justify-items: center;
     }
+    .footer {
+        grid-template-columns: 1fr; 
+        justify-items: center;
+    }
+    .footer-items
+    {
+        padding-top: 10px;
+        padding-bottom: 15px;
+        }
+    .textImg
+        {
+            grid-template-columns: 1fr;
+            padding-bottom: 50px; 
+        }
+    .carousel-images img {
+            width: 400px;
+            height: auto;
+            object-fit:cover;
+            display: none; 
+          }
+          .next {
+            right: 55px; 
+        }
+    
 }
 
 /*LARGE SCREEN */
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 1000px) {
     .grid-container {
-        grid-template-columns: repeat(2, 1fr); /* 3 columns */
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-/*EXTRA LARGE SCREEN */
-@media (min-width: 1025px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr); /* 4 columns */
+
+/*nav bar*/
+@media (max-width: 1250px) {
+    .disappear {
+        display: none;
     }
 }
 
