--- a/css/index.css
+++ b/css/index.css
@@ -38,13 +38,28 @@ img
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     }
+    
+h2 {
+    padding-top: 40px;
+    margin-top: 1%;
+}
 
 h3
     {
     font-family: Georgia, 'Times New Roman', Times, serif;    
-    color: #f5f5f5;
+    color:#543913;
     font-size: larger;
+    padding-bottom: 20px;
     }
 
-
-
+    button {
+        position:absolute;
+        top: 50%; /* Keep the buttons centered vertically */
+        transform: translateY(-50%); /* Adjust for button height */
+        background-color: rgba(255, 255, 255, 0.8);
+        border: none;
+        cursor: pointer;
+        font-size: 18px;
+        padding: 5px;
+        z-index: 100; 
+}
