--- a/css/global.css
+++ b/css/global.css
@@ -211,7 +211,7 @@ h1
 
 h2  
     {
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         color:rgb(15,58,102);
         font-size: xx-large;
         text-align: center;
