--- a/docs/css/about_us.css
+++ b/docs/css/about_us.css
@@ -11,7 +11,6 @@ brown: #52331d;
 #owners {
     height: 400px;
     padding-top: 10px;
-    margin-right: 15px;
 }
 
 p {
@@ -31,10 +30,35 @@ h2 {
     margin-top: 1%;
 }
 
+.textCont
+{
+    width: 50%;
+}
+
+.photo
+{
+   padding-top: 25px;
+   width: 425px;
+
+}
+
+
+
+
+
 /*SMALL SCREEN */
-@media (max-width: 500px) {
-    img
+@media (max-width: 500px) 
+{
+    .photo
     {
-       height: 75px;
+        width: 275px;
+        height: auto;
+       
     }
+    .textCont
+    {
+        width: 100%;
+
+    }
+
 }
