--- a/docs/css/about_us.css
+++ b/docs/css/about_us.css
@@ -39,7 +39,11 @@ h2 {
 {
    padding-top: 25px;
    width: 425px;
+}
 
+.headerSpace
+{
+    padding-top: 0px;
 }
 
 
@@ -53,12 +57,17 @@ h2 {
     {
         width: 275px;
         height: auto;
-       
+       justify-self: center;
     }
     .textCont
     {
         width: 100%;
-
     }
+
+    .headerSpace
+{
+    padding-top: 75px;
+}
+
 
 }
