--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -285,54 +285,40 @@ a.link_decoration {
 }
 
 /*SMALL SCREEN */
-@media (max-width: 500px) {
-    .grid-container {
-        grid-template-columns: 1fr;
-        justify-items: center;
-    }
-    .header
-    {
-        background-image: none;
-    }
-    .footer {
+@media (max-width: 500px)
+{ 
+    .grid-container 
+    { grid-template-columns: 1fr; 
+        justify-items: center; 
+        width: 100%;  
+        padding: 0;  
+        margin: 0; }
+     .header 
+     { background-image: none; } 
+     .footer { 
         grid-template-columns: 1fr; 
-        justify-items: center;
-    }
-    .footer-items
-    {
-        padding-top: 10px;
-        padding-bottom: 15px;
-        }
-    .textImg
-        {
-            grid-template-columns: 1fr;
-            padding-inline: 20px;
-            justify-self:center ;
-        }
-    .carousel-images img {
-            width: 300px;
-            height: auto;
-            object-fit:cover;
-            display: none; 
-          }
-          .next {
-            right: 25px; 
-        }
-        .prev {
-            left: 25px;
-        }
-        .carousel 
-        { 
-            padding-inline: 50px;
-            position:relative;
-            max-width: 75%; /* Set the max width of the carousel */
-            overflow: hidden; /* Hide overflow */
-            display: flex;
-            justify-content: center;
-        }
-}
+        justify-items: center; 
+        width: 100%; } 
+        
+        .footer-items 
+        { padding-top: 10px; 
+            padding-bottom: 15px; } 
+            
+        .textImg 
+        { grid-template-columns: 1fr; 
+            padding-inline: 20px; 
+            justify-self: center; } 
+            
+        .carousel-images img
+         { width: 300px; 
+            height: auto; 
+            object-fit: cover; 
+            display: none; } 
+            
+            .next { right: 25px; } .prev { left: 25px; } .carousel { padding-inline: 50px; position: relative; max-width: 75%; /* Set the max width of the carousel */ overflow: hidden; /* Hide overflow */ display: flex; justify-content: center; }
 
-/*MED SCREEN */
+
+ /*MED SCREEN */
 @media (min-width: 501px) and (max-width: 1000px) {
     .grid-container {
         grid-template-columns: 1fr;
