--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -295,7 +295,9 @@ a.link_decoration {
         margin: 0; }
      .header 
      { background-image: none; } 
-     .footer { 
+     
+     .footer 
+     { 
         grid-template-columns: 1fr; 
         justify-items: center; 
         width: 100%; } 
@@ -305,7 +307,8 @@ a.link_decoration {
             padding-bottom: 15px; } 
             
         .textImg 
-        { grid-template-columns: 1fr; 
+        { 
+            grid-template-columns: 1fr; 
             padding-inline: 20px; 
             justify-self: center; } 
             
@@ -315,9 +318,17 @@ a.link_decoration {
             object-fit: cover; 
             display: none; } 
             
-            .next { right: 25px; } .prev { left: 25px; } .carousel { padding-inline: 50px; position: relative; max-width: 75%; /* Set the max width of the carousel */ overflow: hidden; /* Hide overflow */ display: flex; justify-content: center; }
+            .next { right: 25px; } 
+            .prev { left: 25px; } 
+            .carousel { 
+                padding-inline: 50px; 
+                position: relative; 
+                max-width: 75%; 
+                overflow: hidden; /* Hide overflow */ 
+                display: flex; 
+                justify-content: center; }
 
-
+}
  /*MED SCREEN */
 @media (min-width: 501px) and (max-width: 1000px) {
     .grid-container {
