--- a/docs/css/photos.css
+++ b/docs/css/photos.css
@@ -46,9 +46,9 @@ h4
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         justify-items:center;
-        width:75vw;
-        justify-items: center;
-    }
+        width:75%;
+        }
+
 .twoContainer
 {
     padding-top:15px;
@@ -56,7 +56,7 @@ h4
     grid-template-columns: repeat(2, 1fr);
     justify-items:center;
     width:75%;
-    justify-items: center;
+    justify-self: center;
 }
 
 .photos
@@ -74,7 +74,12 @@ h4
 
 .headerSpace
 {
-    padding-top: 0px;
+    padding-top: 100px;
+}
+
+.titleSpace
+{
+    padding-top: 15px;
 }
 
 /*SMALL SCREEN */
@@ -129,6 +134,11 @@ h4
 .image img
     {
         padding-top: 25px;
+    }
+
+.titleSpace
+    {
+        padding-top: 75px;
     }
 }
 
