--- a/docs/css/services.css
+++ b/docs/css/services.css
@@ -176,7 +176,8 @@ brown: #52331d;
 }
 
 /* Medium Devices (Tablets, Small Desktops) */
-@media (max-width: 991px) {
+@media (max-width: 1000px) /*700*/
+{
     .section {
         padding: 10rem 10% 5rem; /* Adjust padding */
     }
